--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -102,7 +102,8 @@
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
         'image1 content1'
-        'content2 image2';
+        'content2 image2'
+        'image3 content3';
         place-items: center;
     }
 
@@ -114,12 +115,20 @@
         grid-area: image2;
     }
 
+    .work_image3{
+        grid-area: image3;
+    }
+
     .work__content1{
         grid-area: content1;
     }
 
     .work__content2{
         grid-area: content2;
+    }
+    
+    .work_content3{
+        grid-area: content3;
     }
     
     .work__project {
