--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -103,7 +103,8 @@
         grid-template-areas:
         'image1 content1'
         'content2 image2'
-        'image3 content3';
+        'image3 content3'
+        'content4 image4';
         place-items: center;
     }
 
@@ -115,8 +116,12 @@
         grid-area: image2;
     }
 
-    .work_image3{
+    .work__image3{
         grid-area: image3;
+    }
+
+    .work__image4{
+        grid-area: image4;
     }
 
     .work__content1{
@@ -129,6 +134,10 @@
     
     .work_content3{
         grid-area: content3;
+    }
+
+    .work__content4{
+        grid-area: content4;
     }
     
     .work__project {
